styles.css
html, body {
    height: 100%;
}

body {
    background-image: url(https://images.unsplash.com/photo-1523878288860-7ad281611901?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
}

.image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.bg1 {
    border-radius: 5%;
    width: 40em;
}

.introP {
    margin: 2em 2em;
    font-size: 50px;
    text-align: center;
}

h1 {
    text-align: center;
    font-size: 100px;
    margin-top: 40px;
}

.flex-container {
    display: flex;
    height: 100%;
    position: relative;
    z-index: 1;
    flex-direction: row;
    justify-content: space-around;
    align-items: flex-end;
}

.flex-item img {
    height: 22em;
    width: 25em;
    border: 1px black solid;
    border-radius: 5%;
    position: relative;
    z-index: 5;
    margin-bottom: 5em;
}

.flex-item.steak:hover .toolTip1 {
    background-color: rgb(0, 0, 0);
    opacity: 65%;
    z-index: 5;
    height: 5.58em;
    width: 10em;
    padding-top: 130px;
    border-radius: 5%;
    top: 32.6%;
    display: block;
    position: absolute;
    cursor: pointer;
    pointer-events: none;
}

.toolTip1 {
    display: none;
    color: white;
    text-align: center;
    font-size: 40.2px;
    overflow-wrap: break-word;
    z-index: 0;
    position: relative;
}

.flex-item.salmon:hover .toolTip2 {
    background-color: rgb(0, 0, 0);
    opacity: 65%;
    z-index: 5;
    height: 5.55em;
    width: 10em;
    padding-top: 130px;
    border-radius: 5%;
    top: 32.6%;
    display: block;
    position: absolute;
    cursor: pointer;
    pointer-events: none;  
}

.toolTip2 {
    display: none;
    color: white;
    text-align: center;
    font-size: 40.2px;
    overflow-wrap: break-word;
    z-index: 0;
    position: relative;
}

.flex-item.elk:hover .toolTip3 {
    background-color: rgb(0, 0, 0);
    opacity: 65%;
    z-index: 5;
    height: 5.09em;
    width: 10em;
    padding-top: 150px;
    border-radius: 5%;
    top: 32.6%;
    display: block;
    position: absolute;
    cursor: pointer;
    pointer-events: none;
}

.toolTip3 {
    display: none;
    color: white;
    text-align: center;
    font-size: 40.2px;
    overflow-wrap: break-word;
    z-index: 0;
    position: relative;
}

.backToTop {
    position: absolute;
    left: 50;
    right: 50;
    margin-bottom: 1em;
}

